{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 9,
  "lineage": "3c08de68-c4e0-5542-8942-5b84e89308f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "epi1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020de5b9f57b43f76",
            "domain": "vpc",
            "id": "eipalloc-020de5b9f57b43f76",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-205-90-232.compute-1.amazonaws.com",
            "public_ip": "44.205.90.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-eip1"
            },
            "tags_all": {
              "Name": "example-eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:internet-gateway/igw-074954160f2928455",
            "id": "igw-074954160f2928455",
            "owner_id": "426628282260",
            "tags": {
              "Name": "Igw1"
            },
            "tags_all": {
              "Name": "Igw1"
            },
            "vpc_id": "vpc-011c22b1f47017108"
          },
          "dependencies": [
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020de5b9f57b43f76",
            "association_id": "eipassoc-0d46117d0fdef1c58",
            "connectivity_type": "public",
            "id": "nat-02d2ff1d61a992302",
            "network_interface_id": "eni-09975f798d1f7950d",
            "private_ip": "10.0.2.111",
            "public_ip": "44.205.90.232",
            "subnet_id": "subnet-033ad223866f4210f",
            "tags": {
              "Name": "gw NAT1"
            },
            "tags_all": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "aws_eip.epi1",
            "aws_internet_gateway.gw1",
            "aws_subnet.dev11",
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:route-table/rtb-01651ecf852225340",
            "id": "rtb-01651ecf852225340",
            "owner_id": "426628282260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074954160f2928455",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route1"
            },
            "tags_all": {
              "Name": "Route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-011c22b1f47017108"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:route-table/rtb-0ba1b2081e412ec5f",
            "id": "rtb-0ba1b2081e412ec5f",
            "owner_id": "426628282260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074954160f2928455",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routepr1"
            },
            "tags_all": {
              "Name": "Routepr1"
            },
            "timeouts": null,
            "vpc_id": "vpc-011c22b1f47017108"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:subnet/subnet-0784cd6eb3b29f68c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0784cd6eb3b29f68c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426628282260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-011c22b1f47017108"
          },
          "dependencies": [
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:subnet/subnet-033ad223866f4210f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033ad223866f4210f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426628282260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-011c22b1f47017108"
          },
          "dependencies": [
            "aws_vpc.loweh1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "loweh1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426628282260:vpc/vpc-011c22b1f47017108",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0682b4c67427019e1",
            "default_route_table_id": "rtb-0528bddf1ae9f0243",
            "default_security_group_id": "sg-0af82d0e375e2d1e1",
            "dhcp_options_id": "dopt-0ec2a5796fa892471",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011c22b1f47017108",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0528bddf1ae9f0243",
            "owner_id": "426628282260",
            "tags": {
              "Name": "First1"
            },
            "tags_all": {
              "Name": "First1"
            }
          }
        }
      ]
    }
  ]
}